--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,14 @@
+2003-06-26 Alexander Dymo <cloudtemple@mksat.net>
+    * New QComboView widget is added to lib/widgets. It is the modified version
+      of QComboBox with QListView object in place of QListBox.
+    * Make classbrowser use comboviews (QComboView) in namespace, class and method
+      selectors on the toolbar.
+
 2003-06-23 Amilcar Lucas <a.lucas@tu-bs.de>
    * Replaced all TODO occurencies with @todo so that they show up in the
      Doxygen generated documentation under "Related Pages > Todo List"
    * Make Doxygen generate XML files for the codecompletion tooltips
-   
+
 2003-06-18 Mario Scalas <mario.scalas@libero.it>
 	* (CvsPart) New features added:
 	  - It is now possible to add to/remove files from .cvsignore file
