--- a/TODO
+++ b/TODO
@@ -53,10 +53,7 @@ gideon >= kdevelop 2.x UI-wise and functionality-wise!
   - use kdoc to update Qt/KDE docs
 
 * interoperability:
-  - import/export 2.1-projects<-->Gideon-projects
-
-* classview:
-  - delete method/class menu items
+  - export 2.1-projects<-->Gideon-projects
 
 Solve the regression bugs. These are the ones maked with priority
 "HI" in the bug database (bugs.kde.org)
@@ -106,6 +103,10 @@ Other Issues
     . add source to disassembled code as comments
     . basically just re-work the whole disassemble window :)
     
+* classview:
+  - delete method/class menu items
+
+
 5. Code refactoring/improvements
 --------------------------------
 
