--- a/TODO
+++ b/TODO
@@ -48,11 +48,8 @@ gideon >= kdevelop 2.x UI-wise and functionality-wise!
 * doctreeview:
   - use kdoc to update Qt/KDE docs
 
-* interoperability:
-  - export 2.1-projects<-->Gideon-projects
-
-Solve the regression bugs. These are the ones maked with priority
-"HI" in the bug database (bugs.kde.org)
+Solve the regression bugs. These are the ones marked with "HI" priority
+in the bug database (http://bugs.kde.org)
 
 3. Missing UIs (other than 2)
 -----------------------------
