delphi compiler options dialog implemented

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
+2003-07-06 Alexander Dymo <cloudtemple@mksat.net>
+    * Implemented Delphi compiler plugin
+
 2003-07-04 Amílcar do Carmo Lucas <amilcar@ida.ing.tu-bs.de>
-	Added debug and optimized build configurations to all C and C++ autoproject based templates 
+	Added debug and optimized build configurations to all C and C++ autoproject based templates
 
 2003-07-04 Andras Mantia <amantia@freemail.hu>
     * Restore search in documentation functionality
