Resolve symlinks before opening a local file, so you won't end up with the same file opened twice. I gave a quick test and it's ok when you open the files from the Project View, File->Open, Message window, Grep window and the Framestack window. The downside is that the titlebar now shows the canonical path. KDevelopers, if you have a better place for the symlink resolvation, move the code there! Add "-follow" to the "find" arguments, so it will follow the links and the files will be greped even if they are under a symlinked directory.
CCMAIL: kdevelop-devel@kdevelop.org

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-07-15 Andras Mantia <amantia@freemail.hu>
+    * resolve links before opening a local file
+    * add "-follow" as a switch for "find" to successfully grep even in symlinked directories
 2003-07-14 Amilcar Lucas <a.lucas@tu-bs.de>
     * If no Main Program was selected in Project Options...-> Run Options, then use the
     * currently selected active target. This is valid for execution and for debugging.
