Get rid of most of the processEvent() calls, the hack in the main.cpp and make the documentation indexing much faster. Until now the kdevelop-htdig process used 90-98% of the CPU power, so the htdig/htmerge didn't had time to do the job. The code is not beautified, but it works without problems (and doesn't crash on exit).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2003-07-19 Andras Mantia <amantia@freemail.hu>
     * apply the editor settings to the opened files
     * don't crash on exit [#60658]
+    * fasten documentation indexing
 
 2003-07-15 Andras Mantia <amantia@freemail.hu>
     * resolve links before opening a local file
