--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-07-19 Harald Fernengel <harry@kdevelop.org>
+    * QEdtior can now Reload files
+
 2003-07-19 Andras Mantia <amantia@freemail.hu>
     * apply the editor settings to the opened files
     * don't crash on exit [#60658]
