--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-07-28 Amilcar Lucas <a.lucas@tu-bs.de>
+    * Full support for Doxygen 1.3.3
+
 2003-07-25 Gael de Chalendar <Gael . de . Chalendat AT cea . fr>
     * Added "Edit" buttons to the "Includions" and "Prefixes" tabs of the
       automake subproject options dialog and to the "Libraries" tab of the
