--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-08-10 jbb <jbb@kdevelop.org>
+    * Roger Larsson's patch that adds remote debugging.
+    
 2003-08-03 jbb <jbb@kdevelop.org>
     * fixes for debugger startup problems
     * fixes for debugger shutdown
