--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-27 Harald Fernengel <harry@kdevelop.org>
+    * Added language support on the fly - you can switch to
+      SQL mode from a CPP project, or to Perl if you have scripts
+
 2003-08-26 Harald Fernengel <harry@kdevelop.org>
     * Added version information for plugins to prevent opening
       binary incompatible plugins from old versions.
